// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`properties: custom property handles undefined variables 1`] = `
{
  "style": {},
}
`;

exports[`properties: custom property var with hover styles 1`] = `
{
  "style": {
    "color": "#333",
  },
}
`;

exports[`properties: general animationDelay 1`] = `
{
  "style": {
    "animationDelay": 300,
  },
}
`;

exports[`properties: general animationDuration 1`] = `
{
  "style": {
    "animationDuration": 500,
  },
}
`;

exports[`properties: general backgroundImage 1`] = `
{
  "style": {
    "experimental_backgroundImage": "linear-gradient(to bottom right, yellow, green)",
  },
}
`;

exports[`properties: general borderColor 1`] = `
{
  "style": {
    "borderColor": "rgba(0, 0, 0, 0.5)",
  },
}
`;

exports[`properties: general borderStyle 1`] = `
{
  "style": {
    "borderWidth": 0,
  },
}
`;

exports[`properties: general borderStyle 2`] = `
{
  "style": {
    "borderStyle": "solid",
    "borderWidth": 10,
  },
}
`;

exports[`properties: general boxShadow 1`] = `
{
  "style": {
    "boxShadow": "1px 2px 3px 4px red",
  },
}
`;

exports[`properties: general boxShadow 2`] = `
{
  "style": {
    "boxShadow": "1px 2px 3px 4px red, 2px 3px 4px 5px blue",
  },
}
`;

exports[`properties: general boxShadow 3`] = `
{
  "style": {
    "boxShadow": "inset 1px 2px 3px 4px red",
  },
}
`;

exports[`properties: general boxSizing: content-box 1`] = `
{
  "style": {
    "borderWidth": 2,
    "boxSizing": "content-box",
    "height": 50,
    "padding": 10,
    "width": "50%",
  },
}
`;

exports[`properties: general filter 1`] = `
{
  "style": {
    "filter": "blur(1px)",
  },
}
`;

exports[`properties: general fontFamily: normal 1`] = `
{
  "style": {
    "fontFamily": "Arial",
  },
}
`;

exports[`properties: general fontFamily: with multiple fallbacks 1`] = `
{
  "style": {
    "fontFamily": "Roboto",
  },
}
`;

exports[`properties: general fontFamily: with quoted font name 1`] = `
{
  "style": {
    "fontFamily": "SF Pro Display",
  },
}
`;

exports[`properties: general fontFamily: with single quoted font name 1`] = `
{
  "style": {
    "fontFamily": "Helvetica Neue",
  },
}
`;

exports[`properties: general fontVariant 1`] = `
{
  "style": {
    "fontVariant": "common-ligatures small-caps",
  },
}
`;

exports[`properties: general fontWeight 1`] = `
{
  "style": {
    "fontWeight": "900",
  },
}
`;

exports[`properties: general fontWeight 2`] = `
{
  "style": {
    "fontWeight": "bold",
  },
}
`;

exports[`properties: general isolation 1`] = `
{
  "style": {
    "isolation": "isolate",
  },
}
`;

exports[`properties: general lineClamp 1`] = `
{
  "numberOfLines": 3,
  "style": {},
}
`;

exports[`properties: general margin with multiple values 1`] = `
{
  "style": {},
}
`;

exports[`properties: general marginEnd 1`] = `
{
  "style": {},
}
`;

exports[`properties: general marginHorizontal 1`] = `
{
  "style": {},
}
`;

exports[`properties: general marginStart 1`] = `
{
  "style": {},
}
`;

exports[`properties: general marginVertical 1`] = `
{
  "style": {},
}
`;

exports[`properties: general mixBlendMode 1`] = `
{
  "style": {
    "mixBlendMode": "multiply",
  },
}
`;

exports[`properties: general opacity string value 1`] = `
{
  "style": {
    "opacity": 0.25,
  },
}
`;

exports[`properties: general outlineColor,Offset,Style,Width 1`] = `
{
  "style": {
    "outlineColor": "red",
    "outlineOffset": 2,
    "outlineStyle": "solid",
    "outlineWidth": 3,
  },
}
`;

exports[`properties: general padding with multiple values 1`] = `
{
  "style": {},
}
`;

exports[`properties: general paddingHorizontal 1`] = `
{
  "style": {},
}
`;

exports[`properties: general paddingVertical 1`] = `
{
  "style": {},
}
`;

exports[`properties: general pointerEvents 1`] = `
{
  "style": {
    "pointerEvents": "none",
  },
}
`;

exports[`properties: general textShadow 1`] = `
{
  "style": {
    "textShadowColor": "red",
    "textShadowOffset": {
      "height": 2,
      "width": 1,
    },
    "textShadowRadius": 3,
  },
}
`;

exports[`properties: general textShadow 2`] = `
{
  "style": {
    "textShadowColor": "red",
    "textShadowOffset": {
      "height": 2,
      "width": 1,
    },
    "textShadowRadius": 3,
  },
}
`;

exports[`properties: general transitionDelay 1`] = `
{
  "style": {
    "transitionDelay": 300,
  },
}
`;

exports[`properties: general transitionDuration 1`] = `
{
  "style": {
    "transitionDuration": 500,
  },
}
`;

exports[`properties: general transitionProperty 1`] = `
{
  "style": {
    "transitionProperty": "opacity",
  },
}
`;

exports[`properties: general userSelect 1`] = `
{
  "style": {
    "userSelect": "none",
  },
}
`;

exports[`properties: general willChange 1`] = `
{
  "renderToHardwareTextureAndroid": true,
  "style": {},
}
`;

exports[`units: length '0' is resolved to the number 0 1`] = `
{
  "style": {
    "borderRadius": 0,
    "width": 0,
  },
}
`;

exports[`units: length 10 "em" units are resolved to pixels 1`] = `
{
  "style": {
    "height": -160,
    "width": 160,
  },
}
`;

exports[`units: length 10 "em" units based on font-size 1`] = `
{
  "style": {
    "fontSize": 10,
    "width": 100,
  },
}
`;

exports[`units: length 10 "em" units based on inherited font-size 1`] = `
{
  "style": {
    "width": 120,
  },
}
`;

exports[`units: length 10 "px" units are resolved to pixels 1`] = `
{
  "style": {
    "height": -10,
    "width": 10,
  },
}
`;

exports[`units: length 10 "rem" units are resolved to pixels 1`] = `
{
  "style": {
    "height": -160,
    "width": 160,
  },
}
`;

exports[`units: length 10 "vh" units are resolved to pixels 1`] = `
{
  "style": {
    "height": -60,
    "width": 60,
  },
}
`;

exports[`units: length 10 "vmax" units are resolved to pixels 1`] = `
{
  "style": {
    "height": -60,
    "width": 60,
  },
}
`;

exports[`units: length 10 "vmin" units are resolved to pixels 1`] = `
{
  "style": {
    "height": -32,
    "width": 32,
  },
}
`;

exports[`units: length 10 "vw" units are resolved to pixels 1`] = `
{
  "style": {
    "height": -32,
    "width": 32,
  },
}
`;
